--- a/Pizza/pizza.html
+++ b/Pizza/pizza.html
@@ -195,16 +195,16 @@
                     <label class="form-check-label" for="marinara">Marinara</label>
             </div>
             <div class="form-check form-check-inline choices">
-                <input class="form-check-input" type="radio" name="sauces" id="garlicButter" value="Garlic Butter">
-                <label class="form-check-label" for="garlic">Garlic Butter</label>
+                <input class="form-check-input" type="radio" name="sauces" id="white" value="White Sauce">
+                <label class="form-check-label" for="white">White Sauce</label>
             </div>
             <div class="form-check form-check-inline choices">
-                <input class="form-check-input" type="radio" name="sauces" id="cheese" value="Cheese Stuffed">
-                <label class="form-check-label" for="cheese">Cheese Stuffed</label>
+                <input class="form-check-input" type="radio" name="sauces" id="bbq" value="BBQ Sauce">
+                <label class="form-check-label" for="bbq">BBQ Sauce</label>
             </div>
             <div class="form-check form-check-inline choices">
-                    <input class="form-check-input" type="radio" name="sauces" id="spicy" value="Spicy">
-                    <label class="form-check-label" for="spicy">Spicy</label>
+                    <input class="form-check-input" type="radio" name="sauces" id="none" value="No Sauce">
+                    <label class="form-check-label" for="nosauce">No Sauce</label>
             </div>
     <br><br><br><br>
 
